# Template-CUDA

./: README.md
CUDA Template/: CMakeLists.txt  README.md  cleanrun.ps1  run.ps1
CUDA Template/include/: kernel1.cuh  kernel1.h  scream.h
CUDA Template/kernels/: kernel1.cu
CUDA Template/src/: main.cpp  scream.cpp
